# emosaic

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  UPLOAD_SCRIPTS.md  mosaico  tiles_dir
aws-backend/: README.md  deploy.sh  requirements.txt  tile_manager.py  update-api-endpoint.sh
aws-backend/cloudformation/: api-gateway.yaml  tile-flags-infrastructure.yaml
aws-backend/lambda/: admin_get_all_flags.py  get_flags.py  toggle_flag.py
src/: main.rs
src/assets/: mosaic-widget.css  mosaic-widget.js
src/mosaic/: algorithms.rs  analysis.rs  color.rs  error.rs  image.rs  mod.rs  rendering.rs  stats.rs  tiles.rs
src/mosaic/tiles/: tile.rs  tileset.rs  utils.rs
src/mosaic/web/: html_stats.rs  main_page.rs  mod.rs  widget.rs
