[package]
name = "emosaic"
version = "1.0.0"
authors = ["Will Dady <willdady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
clap = { version = "3.2.20", features = ["derive"] }
rand = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
typenum = "*"
indicatif = "0.17"
rayon = "1.10"
derive_more = "0.99"
dirs = "5.0"
paste = "1.0"
md5 = "0.7.0"
kiddo = "4.2"
fixed = "*"
num-integer = "*"
itertools = "*"
kamadak-exif = "*"